[gd_scene load_steps=13 format=3 uid="uid://81y6vvel1y5x"]

[ext_resource type="Texture2D" uid="uid://7fknnavhqyfo" path="res://assets/prefabs/box/MessageBox01.png" id="1_ryf6d"]
[ext_resource type="Script" path="res://scripts/box_skill_info.gd" id="1_yu6iq"]
[ext_resource type="FontFile" uid="uid://c17ascng2deth" path="res://assets/font/njo_14.ttf" id="2_2r86b"]
[ext_resource type="Texture2D" uid="uid://dvsioohm5fxr4" path="res://assets/prefabs/icons/X.png" id="3_wjx5i"]
[ext_resource type="Texture2D" uid="uid://btxjnjlhj68f0" path="res://assets/skills/47.png" id="5_rox0s"]
[ext_resource type="Texture2D" uid="uid://ctldyihhvugjg" path="res://assets/prefabs/buttons/ButtonHover.png" id="6_c416s"]
[ext_resource type="Texture2D" uid="uid://j2khku0ce0y2" path="res://assets/prefabs/buttons/ButtonActive.png" id="7_i3n3o"]

[sub_resource type="LabelSettings" id="LabelSettings_ceham"]
font = ExtResource("2_2r86b")
font_size = 20
font_color = Color(0.947199, 0.947199, 0.947199, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_t7slo"]
font = ExtResource("2_2r86b")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_s8amf"]
line_spacing = 5.0
font = ExtResource("2_2r86b")
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_5w7g4"]
font = ExtResource("2_2r86b")
font_size = 14
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1jerf"]
font = ExtResource("2_2r86b")
font_size = 12
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="BoxSkillInfo" type="Control" node_paths=PackedStringArray("label_skill_level", "label_skill_name", "label_skill_description", "label_upgrade_cost", "label_skill_points") groups=["box_skill_info"]]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.0
offset_top = -96.5
offset_right = 246.0
offset_bottom = 142.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yu6iq")
label_skill_level = NodePath("SkillLevel")
label_skill_name = NodePath("SkillName")
label_skill_description = NodePath("SkillDescription")
label_upgrade_cost = NodePath("UpgradeCost")
label_skill_points = NodePath("SkillPoints")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ryf6d")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -28.0
offset_top = 14.0
offset_right = 28.0
offset_bottom = 35.0
grow_horizontal = 2
text = "Skills"
label_settings = SubResource("LabelSettings_ceham")

[node name="BtnClose" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -41.0
offset_top = 15.0
offset_right = -16.0
offset_bottom = 33.0
grow_horizontal = 0
texture_normal = ExtResource("3_wjx5i")

[node name="SkillIcon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -68.0
offset_right = 100.0
offset_bottom = -18.0
grow_vertical = 2
texture = ExtResource("5_rox0s")
expand_mode = 1
stretch_mode = 5

[node name="SkillName" type="Label" parent="."]
custom_minimum_size = Vector2(365, 23)
layout_mode = 0
offset_left = 104.0
offset_top = 59.5
offset_right = 469.0
offset_bottom = 82.5
text = "Increase Drop Gold Lvl 1"
label_settings = SubResource("LabelSettings_t7slo")
horizontal_alignment = 1

[node name="SkillLevel" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 109.0
offset_right = 106.0
offset_bottom = 128.0
text = "Lvl 1"
label_settings = SubResource("LabelSettings_t7slo")
horizontal_alignment = 1

[node name="SkillDescription" type="Label" parent="."]
custom_minimum_size = Vector2(365, 23)
layout_mode = 0
offset_left = 104.0
offset_top = 88.5
offset_right = 469.0
offset_bottom = 121.5
text = "Aumenta o drop de gold em % por 30 segundos.
Cooldown de 150 segundos!"
label_settings = SubResource("LabelSettings_s8amf")
horizontal_alignment = 1
autowrap_mode = 2

[node name="UpgradeCost" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -230.0
offset_top = -73.0
offset_right = -98.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 0
text = "Custo 
5 Skills Points"
label_settings = SubResource("LabelSettings_5w7g4")
horizontal_alignment = 1

[node name="SkillPoints" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -39.0
offset_right = 50.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
text = "Skill Points: 15"
label_settings = SubResource("LabelSettings_5w7g4")
horizontal_alignment = 1

[node name="IncreaseSkill" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -204.0
offset_top = -102.0
offset_right = -132.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("6_c416s")
texture_pressed = ExtResource("6_c416s")
texture_hover = ExtResource("7_i3n3o")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="IncreaseSkill"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.5
offset_top = -6.5
offset_right = 27.5
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2
text = "Upgrade"
label_settings = SubResource("LabelSettings_1jerf")
horizontal_alignment = 1

[connection signal="pressed" from="BtnClose" to="." method="_on_btn_close_pressed"]
[connection signal="pressed" from="IncreaseSkill" to="." method="_on_increase_skill_pressed"]
